--- a/arch/arm64/boot/dts/freescale/mba8xx.dtsi
+++ b/arch/arm64/boot/dts/freescale/mba8xx.dtsi
@@ -1,6 +1,6 @@
-// SPDX-License-Identifier: (GPL-2.0-or-later OR X11)
+// SPDX-License-Identifier: (GPL-2.0-or-later OR MIT)
 /*
- * Copyright 2018-2023 TQ-Systems GmbH <linux@ew.tq-group.com>,
+ * Copyright 2018-2024 TQ-Systems GmbH <linux@ew.tq-group.com>,
  * D-82229 Seefeld, Germany.
  * Author: Alexander Stein
  */
@@ -46,12 +46,14 @@
 			label = "switcha";
 			linux,code = <BTN_0>;
 			gpios = <&lsio_gpio1 13 GPIO_ACTIVE_LOW>;
+			wakeup-source;
 		};
 
 		switch-b {
 			label = "switchb";
 			linux,code = <BTN_1>;
 			gpios = <&lsio_gpio1 14 GPIO_ACTIVE_LOW>;
+			wakeup-source;
 		};
 	};
 
@@ -73,7 +75,37 @@
 		};
 	};
 
-	/* TODO LVDS panels */
+	panel_lvds0: panel-lvds0 {
+		/*
+		 * Display is not fixed, so compatible has to be added from
+		 * DT
+		 */
+		backlight = <&backlight_lvds>;
+		power-supply = <&reg_3v3>;
+		status = "disabled";
+
+		port {
+			panel_in_lvds0: endpoint {
+				remote-endpoint = <&lvds0_out>;
+			};
+		};
+	};
+
+	panel_lvds1: panel-lvds1 {
+		/*
+		 * Display is not fixed, so compatible has to be added from
+		 * DT
+		 */
+		backlight = <&backlight_lvds>;
+		power-supply = <&reg_3v3>;
+		status = "disabled";
+
+		port {
+			panel_in_lvds1: endpoint {
+				remote-endpoint = <&lvds1_out>;
+			};
+		};
+	};
 
 	reg_12v0: regulator-12v0 {
 		compatible = "regulator-fixed";
@@ -132,6 +164,26 @@
 			alloc-ranges = <0 0x96000000 0 0x30000000>;
 			linux,cma-default;
 		};
+
+		decoder_boot: decoder-boot@84000000 {
+			reg = <0 0x84000000 0 0x2000000>;
+			no-map;
+		};
+
+		encoder_boot: encoder-boot@86000000 {
+			reg = <0 0x86000000 0 0x200000>;
+			no-map;
+		};
+
+		decoder_rpc: decoder-rpc@92000000 {
+			reg = <0 0x92000000 0 0x100000>;
+			no-map;
+		};
+
+		encoder_rpc: encoder-rpc@92200000 {
+			reg = <0 0x92100000 0 0x700000>;
+			no-map;
+		};
 	};
 
 	sound {
@@ -160,6 +212,7 @@
 	pinctrl-0 = <&pinctrl_fec1>;
 	phy-mode = "rgmii-id";
 	phy-handle = <&ethphy0>;
+	fsl,magic-packet;
 	status = "okay";
 
 	mdio {
@@ -182,6 +235,10 @@
 			enet-phy-lane-no-swap;
 			interrupt-parent = <&lsio_gpio3>;
 			interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+			/* LED0: Link, LED2: activity */
+			ti,led-function = <0x0100>;
+			/* LED0/2: active High, driven by phy function */
+			ti,led-ctrl = <0x1414>;
 		};
 
 		ethphy3: ethernet-phy@3 {
@@ -194,12 +251,13 @@
 			ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 			ti,dp83867-rxctrl-strap-quirk;
 			ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
-			reset-gpios = <&lsio_gpio3 3 GPIO_ACTIVE_LOW>;
-			reset-assert-us = <500000>;
-			reset-deassert-us = <50000>;
 			enet-phy-lane-no-swap;
 			interrupt-parent = <&lsio_gpio3>;
 			interrupts = <1 IRQ_TYPE_EDGE_FALLING>;
+			/* LED0: Link, LED2: activity */
+			ti,led-function = <0x0100>;
+			/* LED0/2: active High, driven by phy function */
+			ti,led-ctrl = <0x1414>;
 		};
 	};
 };
@@ -209,9 +267,17 @@
 	pinctrl-0 = <&pinctrl_fec2>;
 	phy-mode = "rgmii-id";
 	phy-handle = <&ethphy3>;
+	/*
+	 * Reset in PHY node not possible as deffered probe for PHY from other
+	 * MDIO bus is not supported
+	 */
+	phy-reset-gpios = <&lsio_gpio3 3 GPIO_ACTIVE_LOW>;
+	phy-reset-duration = <500>;
+	fsl,magic-packet;
 	status = "okay";
 };
 
+/* CPU device tree mixes up counting from 0 and counting from 1 */
 &flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_can0>;
@@ -278,13 +344,47 @@
 	status = "okay";
 };
 
-/* TODO LDB */
+&ldb1 {
+	lvds-channel@0 {
+		port@1 {
+			reg = <1>;
+
+			lvds0_out: endpoint {
+				remote-endpoint = <&panel_in_lvds0>;
+			};
+		};
+	};
+};
+
+&ldb2 {
+	lvds-channel@0 {
+		port@1 {
+			reg = <1>;
+
+			lvds1_out: endpoint {
+				remote-endpoint = <&panel_in_lvds1>;
+			};
+		};
+	};
+};
 
 &lpspi1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_spi1>;
 	cs-gpios = <&lsio_gpio0 27 GPIO_ACTIVE_LOW>, <&lsio_gpio0 29 GPIO_ACTIVE_LOW>;
 	status = "okay";
+
+	spidev1_0: spidev0@0 {
+		compatible = "tq,testdev";
+		reg = <0>;
+		spi-max-frequency = <5000000>;
+	};
+
+	spidev1_1: spidev1@1 {
+		compatible = "tq,testdev";
+		reg = <1>;
+		spi-max-frequency = <5000000>;
+	};
 };
 
 &lpspi2 {
@@ -292,6 +392,12 @@
 	pinctrl-0 = <&pinctrl_spi2>;
 	cs-gpios = <&lsio_gpio1 0 GPIO_ACTIVE_LOW>;
 	status = "okay";
+
+	spidev2_0: spidev0@0 {
+		compatible = "tq,testdev";
+		reg = <0>;
+		spi-max-frequency = <5000000>;
+	};
 };
 
 &lpspi3 {
@@ -300,6 +406,18 @@
 	num-cs = <2>;
 	cs-gpios = <&lsio_gpio0 16 GPIO_ACTIVE_LOW>;
 	status = "okay";
+
+	spidev3_0: spidev0@0 {
+		compatible = "tq,testdev";
+		reg = <0>;
+		spi-max-frequency = <5000000>;
+	};
+
+	spidev3_1: spidev1@1 {
+		compatible = "tq,testdev";
+		reg = <1>;
+		spi-max-frequency = <5000000>;
+	};
 };
 
 &lpuart1 {
@@ -327,7 +445,22 @@
 			  "", "", "", "";
 };
 
-/* TODO: Mini-PCIe */
+&pcieb {
+	compatible = "fsl,imx8qxp-pcie", "snps,dw-pcie";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pcieb>;
+	disable-gpio = <&expander 7 GPIO_ACTIVE_LOW>;
+	reset-gpio = <&lsio_gpio4 0 GPIO_ACTIVE_LOW>;
+	ext_osc = <1>;
+	vpcie-supply = <&reg_pcie_1v5>;
+	l1ss-disabled;
+	status = "okay";
+};
+
+&phyx1 {
+	fsl,refclk-pad-mode = <IMX8_PCIE_REFCLK_PAD_INPUT>;
+	status = "okay";
+};
 
 &sai1 {
 	assigned-clocks = <&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_PLL>,
@@ -397,7 +530,9 @@
 	};
 
 	pinctrl_bl_lvds: bllvdsgrp {
-		fsl,pins = <IMX8QXP_MIPI_DSI1_I2C0_SDA_LSIO_GPIO1_IO30	0x00000021>;
+		fsl,pins = <IMX8QXP_MIPI_DSI1_I2C0_SDA_LSIO_GPIO1_IO30	0x00000021>,
+			   <IMX8QXP_MIPI_DSI0_I2C0_SCL_LSIO_GPIO1_IO25	0x00000021>,
+			   <IMX8QXP_MIPI_DSI1_I2C0_SCL_LSIO_GPIO1_IO29	0x00000021>;
 	};
 
 	pinctrl_can0: can0grp {
@@ -416,8 +551,7 @@
 	};
 
 	pinctrl_ethphy3: ethphy3grp {
-		fsl,pins = <IMX8QXP_CSI_RESET_LSIO_GPIO3_IO03		0x00000040>,
-			   <IMX8QXP_CSI_MCLK_LSIO_GPIO3_IO01		0x00000040>;
+		fsl,pins = <IMX8QXP_CSI_MCLK_LSIO_GPIO3_IO01		0x00000040>;
 	};
 
 	pinctrl_fec1: fec1grp {
@@ -449,7 +583,8 @@
 			   <IMX8QXP_SPDIF0_RX_CONN_ENET1_RGMII_RXD0		0x00000040>,
 			   <IMX8QXP_ESAI0_TX3_RX2_CONN_ENET1_RGMII_RXD1		0x00000040>,
 			   <IMX8QXP_ESAI0_TX2_RX3_CONN_ENET1_RGMII_RXD2		0x00000040>,
-			   <IMX8QXP_ESAI0_TX1_CONN_ENET1_RGMII_RXD3		0x00000040>;
+			   <IMX8QXP_ESAI0_TX1_CONN_ENET1_RGMII_RXD3		0x00000040>,
+			   <IMX8QXP_CSI_RESET_LSIO_GPIO3_IO03			0x00000040>;
 	};
 
 	pinctrl_gpiobuttons: gpiobuttonsgrp {
