--- a/arch/arm64/boot/dts/freescale/tqma8xx.dtsi
+++ b/arch/arm64/boot/dts/freescale/tqma8xx.dtsi
@@ -1,6 +1,6 @@
-// SPDX-License-Identifier: (GPL-2.0-or-later OR X11)
+// SPDX-License-Identifier: (GPL-2.0-or-later OR MIT)
 /*
- * Copyright 2018-2023 TQ-Systems GmbH <linux@ew.tq-group.com>,
+ * Copyright 2018-2024 TQ-Systems GmbH <linux@ew.tq-group.com>,
  * D-82229 Seefeld, Germany.
  * Author: Alexander Stein
  */
@@ -56,7 +56,9 @@
 	};
 };
 
-/* TODO GPU */
+&gpu_3d0 {
+	status = "okay";
+};
 
 &i2c1 {
 	#address-cells = <1>;
@@ -94,6 +96,10 @@
 		pagesize = <32>;
 		vcc-supply = <&reg_3v3>;
 	};
+};
+
+&imx8_gpu_ss {
+	status = "okay";
 };
 
 &mu_m0 {
