--- a/arch/arm64/boot/dts/freescale/tqma8xxs.dtsi
+++ b/arch/arm64/boot/dts/freescale/tqma8xxs.dtsi
@@ -86,26 +86,6 @@
 		#size-cells = <2>;
 		ranges;
 
-		decoder_boot: decoder-boot@84000000 {
-			reg = <0 0x84000000 0 0x2000000>;
-			no-map;
-		};
-
-		encoder_boot: encoder-boot@86000000 {
-			reg = <0 0x86000000 0 0x200000>;
-			no-map;
-		};
-
-		decoder_rpc: decoder-rpc@92000000 {
-			reg = <0 0x92000000 0 0x100000>;
-			no-map;
-		};
-
-		encoder_rpc: encoder-rpc@92200000 {
-			reg = <0 0x92100000 0 0x700000>;
-			no-map;
-		};
-
 		/*
 		 * global autoconfigured region for contiguous allocations
 		 * must not exceed memory size and region
@@ -116,6 +96,73 @@
 			size = <0 0x20000000>;
 			alloc-ranges = <0 0x96000000 0 0x30000000>;
 			linux,cma-default;
+		};
+
+		decoder_boot: decoder-boot@84000000 {
+			reg = <0 0x84000000 0 0x2000000>;
+			no-map;
+		};
+
+		encoder_boot: encoder-boot@86000000 {
+			reg = <0 0x86000000 0 0x200000>;
+			no-map;
+		};
+
+		m4_reserved: m4@88000000 {
+			no-map;
+			reg = <0 0x88000000 0 0x8000000>;
+			status = "disabled";
+		};
+
+		vdev0vring0: vdev0vring0@90000000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x90000000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdev0vring1: vdev0vring1@90008000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x90008000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdev1vring0: vdev1vring0@90010000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x90010000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdev1vring1: vdev1vring1@90018000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x90018000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		rsc_table: rsc-table@900ff000 {
+			reg = <0 0x900ff000 0 0x1000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdevbuffer: vdevbuffer {
+			compatible = "shared-dma-pool";
+			reg = <0 0x90400000 0 0x100000>;
+			no-map;
+			status = "disabled";
+		};
+
+		decoder_rpc: decoder-rpc@92000000 {
+			reg = <0 0x92000000 0 0x100000>;
+			no-map;
+		};
+
+		encoder_rpc: encoder-rpc@92200000 {
+			reg = <0 0x92100000 0 0x700000>;
+			no-map;
 		};
 	};
 };
