arm64: dts: mba8xx: Fix typo in comment
Fixes typo slipped in.

Fixes: 0190d3e33ca2e ("arm64: dts: imx8qxp-tqma8xqp-mba8xx: Adapt to downstream kernel")
Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/mba8xx.dtsi
+++ b/arch/arm64/boot/dts/freescale/mba8xx.dtsi
@@ -309,7 +309,7 @@
 	phy-mode = "rgmii-id";
 	phy-handle = <&ethphy3>;
 	/*
-	 * Reset in PHY node not possible as deffered probe for PHY from other
+	 * Reset in PHY node not possible as deferred probe for PHY from other
 	 * MDIO bus is not supported
 	 */
 	phy-reset-gpios = <&lsio_gpio3 3 GPIO_ACTIVE_LOW>;
