arm64: dt: imx93-tqma9352-mba93xx[la/ca]: fix Cortex-M / NPU tree
Need to enable mailbox for rpmsg communication with Cortex-M.

Fixes: 8488b96bd510 ("arm64: dts: imx93-tqma9352-mba93xx[la/ca]: add RPMSG / Cortex-M / NPU")

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx93-tqma9352-mba93xx-rpmsg.dts
+++ b/arch/arm64/boot/dts/freescale/imx93-tqma9352-mba93xx-rpmsg.dts
@@ -12,10 +12,6 @@
 	status = "okay";
 };
 
-&npu {
-	status = "okay";
-};
-
 /* NPU shared region */
 &ethosu_mem {
 	status = "okay";
@@ -28,6 +24,16 @@
 
 /* carveout for Cortex M33 running in DDR, disabled by default */
 &m33_reserved {
+	status = "okay";
+};
+
+/* mailbox to communicate with Cortex M33 */
+&mu1 {
+	status = "okay";
+};
+
+/* NPU only usable with Cortex M33 */
+&npu {
 	status = "okay";
 };
 
